creusot/tests/should_fail/bug/ice-final-borrows.stderr
error[E0594]: cannot assign to `*x`, which is behind a `&` reference
 --> ice-final-borrows.rs:9:5
  |
9 |     *x = 1;
  |     ^^^^^^ `x` is a `&` reference, so the data it refers to cannot be written
  |
help: consider changing this to be a mutable reference
  |
8 | pub fn mutates_immutable(x: &mut i32) {
  |                              +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
